--- a/scheduler/templates/base.html
+++ b/scheduler/templates/base.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>{{ title }}</h1>
+      <h1><a href="/" style="text-decoration: none">{{ title }}</a></h1>
       <hr>
       {% block content %}{% endblock %}
     </div>
