--- a/scheduler/templates/server_table.html
+++ b/scheduler/templates/server_table.html
@@ -58,7 +58,7 @@
   });
 
   setInterval(function () {
-    $('#data').DataTable().ajax.reload();
+    $('#data').DataTable().ajax.reload(null,false);
   }, 1000);
 </script>
 {% endblock %}
