--- a/scheduler/templates/settings.html
+++ b/scheduler/templates/settings.html
@@ -1,21 +1,10 @@
 {% extends "base.html" %}
 
+
 {% block content %}
 
 <div id="gpus_table"></div>
 
-<!-- <table class="table" id="gpus_table">
-    <thead>
-        <tr>
-            <th scope="col">GPUs</th>
-            <th scope="col">Memory</th>
-            <th scope="col">Utilization</th>
-            <th scope="col">Enabled</th>
-        </tr>
-    </thead>
-    <tbody>
-    </tbody>
-</table> -->
 {% endblock %}
 
 {% block scripts %}
@@ -80,6 +69,7 @@
 
     function reply_click(gpu_id) {
         $.post("/update_enabled_gpus", { "gpu_id": gpu_id, "enabled": document.getElementById(gpu_id).checked });
+        $(location).prop('href', '/update_enabled_gpus')
     }
 
 </script>
